Add endpoint to get problem statement through API following CLICS spec. Closes #1655.
