# webapp/config/packages/nelmio_api_doc.yaml
@@ -102,6 +102,15 @@ nelmio_api_doc:
                             schema:
                                 type: string
             schemas:
+                FileList:
+                    type: array
+                    items:
+                        type: object
+                        properties:
+                            href:
+                                type: string
+                            mime:
+                                type: string
                 ImageList:
                     type: array
                     items:
@@ -152,6 +161,8 @@ nelmio_api_doc:
                             format: float
                         test_data_count:
                             type: integer
+                        statement:
+                            $ref: "#/components/schemas/StatementList"
                 Files:
                     properties:
                         files:
@@ -164,6 +175,17 @@ nelmio_api_doc:
                             href:
                                 type: string
                             mime:
+                                type: string
+                StatementList:
+                    type: array
+                    items:
+                        type: object
+                        properties:
+                            href:
+                                type: string
+                            mime:
+                                type: string
+                            hash:
                                 type: string
                             filename:
                                 type: string
